# whatsappy

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  requeriments.txt  requirements.txt  setup.cfg  setup.py  whatsappy.py
data/: data.dir
examples/: add_to_group.py  change_group_description.py  change_group_name copy.py  change_group_name.py  change_group_pfp.py  close.py  create_group.py  exit.py  get_group_invite_link.py  get_pinned_chats.py  get_qrcode.py  get_recent_chats.py  last_message.py  leave_group.py  login.py  make_group_admin.py  new_message.py  remove_from_group.py  reply.py  reply_file_privately.py  reply_privately.py  select_chat.py  select_chat_by_name.py  select_chat_by_number.py  send.py  send_file.py
tests/: test.py
whatsappy/: __init__.py  actions.py  ascii_qrcode.py  chat.py  error.py  get.py  group.py  login.py  main.py  message.py  tool.py  whatsapp.py  wpp.py
whatsappy/chat/: __init__.py  chat.py  conversation.py  group.py  groupchat.py  unread.py  unread_message.py
whatsappy/cmds/: actions.py  chat.py  get.py  group.py  login.py
whatsappy/messages/: __init__.py  document.py  message.py  unread_message.py
whatsappy/util/: __init__.py  exceptions.py  me.py  other.py  selectors.py  selenium.py
