[metadata]
name = whatsappy-py
version = 4.1.3
author = Italo Seara
author_email = italo.sseara@gmail.com
description = Whatsappy is a Python library for interacting with WhatsApp Web using Selenium. With this library, you can automate WhatsApp tasks such as sending messages, creating groups, and more.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/italoseara/whatsappy
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Communications :: Chat
    Topic :: Home Automation
    Topic :: Internet    

[options]
packages = find:
python_requires = >=3.11
install_requires = file: requirements.txt
